--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.5",
+    "less": "^4.1.1",
+    "less-loader": "^6.0.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
