--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "less": "^4.1.1",
     "less-loader": "^6.0.0",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vue-table-with-tree-grid": "^0.2.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
